# SIMULADORES-SISTOS

./: README.md  hello  hello.cpp  main.cpp  simulator
data/: processes.txt
qt/: CMakeLists.txt  ganttchartwidget.cpp  ganttchartwidget.h  loader.cpp  loader.h  main.cpp  processsimulator.cpp  processsimulator.h  scheduler.cpp  scheduler.h  synchronizationsimulator.cpp  synchronizationsimulator.h  synchronizer.cpp  synchronizer.h  utils.h
qt/data/: actions.txt  resources.txt
src/: Makefile  gui.cpp  gui.h  loader.cpp  loader.h  main.cpp  scheduler.cpp  scheduler.h  simulator  utils.cpp  utils.h
